--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,5 +1,4 @@
 @import '~photon-colors/photon-colors';
-
 .layout {
   min-height: 100vh;
   display: grid;
@@ -12,4 +11,23 @@
   grid-gap: 32px;
   grid-template-rows: 280px 1fr auto;
   padding: 24px;
+}
+
+.index {
+  .products {
+    display: grid;
+    grid-gap: 24px;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  }
+  .products__card {
+    color: $white-100;
+    padding: 16px;
+    text-decoration: none;
+    transition: background 150ms;
+    user-select: none;
+    &:hover,
+    &:focus {
+      background: $grey-10-a10;
+    }
+  }
 }
