--- a/src/templates/ProductFooter/index.scss
+++ b/src/templates/ProductFooter/index.scss
@@ -2,16 +2,27 @@
 
 .product-footer {
   display: flex;
-  margin: 24px auto 0;
+  margin: 30px auto 0;
   max-width: 1200px;
   width: 96%;
 
   h4 {
-    padding: 24px;
+    padding: 30px;
   }
 
   a {
     color: $grey-90-a80;
     text-decoration: none;
+  }
+}
+
+@media (max-width: 719px) {
+  .product-footer {
+    flex-direction: column;
+    margin: 30px;
+
+    h4 {
+      padding: 8px;
+    }
   }
 }
