--- a/src/templates/ProductHeader/index.scss
+++ b/src/templates/ProductHeader/index.scss
@@ -3,11 +3,8 @@
   display: flex;
   font-weight: 400;
   grid-column: 1 / -1;
-  height: 96px;
-  justify-content: space-between;
-  margin: 0 auto;
-  max-width: 1080px;
-  width: 96%;
+  width: 100vw;
+  padding: 30px;
 
   h2 {
     align-items: center;
@@ -34,5 +31,26 @@
     height: 32px;
     margin: 0 10px 0 0;
     width: 32px;
+  }
+  .product-header__container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1080px;
+    width: 100vw;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 719px) {
+  .product-header__container {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 479px) {
+  .product-header {
+    li {
+      display: none;
+    }
   }
 }
