--- a/src/templates/ProductFacets/index.scss
+++ b/src/templates/ProductFacets/index.scss
@@ -18,9 +18,15 @@
     justify-content: center;
     max-width: 440px;
     width: 100%;
+    padding: 0 20px;
+
+    h2 {
+      font-size: 36px;
+    }
 
     p {
-      font-size: 22px;
+      font-size: 20px;
+      opacity: .7;
     }
   }
 
@@ -30,6 +36,7 @@
     display: flex;
     height: 320px;
     max-width: 440px;
+    padding: 0 20px;
   }
 
   img {
@@ -38,6 +45,7 @@
 
   &:nth-child(odd) {
     background: linear-gradient(#e1eff8, #cbe3f5);
+    padding: 90px 0;
 
     .product-facet__top {
       background-size: 100% 60px;
@@ -71,7 +79,7 @@
 @media (max-width: 959px) {
   .product-facet {
     margin: 60px 0;
-    padding: 60px 30px;
+    padding: 60px 0;
     position: relative;
     text-align: center;
   
