--- a/src/templates/ProductHero/index.scss
+++ b/src/templates/ProductHero/index.scss
@@ -15,11 +15,11 @@
   button {
     background: $blue-50;
     border: 0;
-    border-radius: 4px;
+    border-radius: 50px;
     color: $white-100;
     cursor: pointer;
-    font-size: 24px;
-    padding: 16px;
+    font-size: 20px;
+    padding: 12px 24px;
 
     &:hover,
     &:focus {
@@ -32,22 +32,25 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 420px;
+    max-width: 360px;
     width: 100%;
 
     h1 {
       font-size: 54px;
+      color: $grey-90;
     }
 
     p {
-      font-size: 28px;
-      font-weight: 700;
+      font-size: 24px;
+      font-weight: 500;
       opacity: 0.8;
+      margin-bottom: 32px;
     }
   }
   .product-hero__image {
     align-items: center;
     display: flex;
+    max-width: 640px;
   }
 }
 
@@ -63,11 +66,15 @@
       margin: 0 auto;
 
       h1 {
-        margin: 0 auto 1rem auto;
+        margin: 2rem auto 1rem auto;
+      }
+
+      a {
+        margin: 0 auto;
       }
 
       button {
-        margin: auto;
+        margin: 0 auto;
       }
     }
     .product-hero__image {
