--- a/src/templates/ProductHero/index.scss
+++ b/src/templates/ProductHero/index.scss
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 360px;
+    max-width: 40%;
     width: 100%;
 
     h1 {
@@ -64,6 +64,7 @@
     .product-hero__content {
       text-align: center;
       margin: 0 auto;
+      max-width: 720px;
 
       h1 {
         margin: 2rem auto 1rem auto;
@@ -75,6 +76,10 @@
 
       button {
         margin: 0 auto;
+      }
+
+      p {
+        margin: 0 auto 32px auto;
       }
     }
     .product-hero__image {
