--- a/src/components/Products/index.scss
+++ b/src/components/Products/index.scss
@@ -3,10 +3,12 @@
 .products {
   display: grid;
   grid-gap: 24px;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 320px));
+  grid-auto-rows: 200px;
 }
 
 .products__card {
+  background: $grey-10-a10;
   color: $white-100;
   padding: 16px;
   text-decoration: none;
@@ -14,6 +16,6 @@
   user-select: none;
   &:hover,
   &:focus {
-    background: $grey-10-a10;
+    background: $grey-10-a20;
   }
 }
